--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-wilkommen zu home!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <style>
+        body {
+            background-color: rgb(58, 58, 58);
+        }
+    </style>
+</head>
+
+<body>
+
+</body>
+
+</html>
