--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <style>
         body {
             background-color: rgb(58, 58, 58);
+            text-align: center;
+        }
+        
+        h1 {
+            color: rgb(255, 255, 255);
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 50px;
         }
     </style>
 </head>
 
 <body>
-
+    <h1><u>Welcome to Rewards and Verifier!</u></h1>
 </body>
 
 </html>
