--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
     <style>
         body {
-            background-image: url("https://github.com/verifier-discord/verifier-discord.github.io/blob/main/background.jpeg");
+            background-image: url("https://wallpapercave.com/wp/wp3382992.jpg");
             background-size: cover;
             text-align: center;
         }
