--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             margin: 0;
             padding: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #f4f4f4;
+            background-image: url("blueback.jpg"); 
+            background-size: cover;
             color: #333;
         }
 
@@ -19,7 +20,7 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background: #fff;
+            background: rgba(255, 255, 255, 0.8);
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
