--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
 
 <body>
     <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="devs.html">Developers</a>
-        <a href="about.html">About</a>
+        <a href="https://verifier-discord.github.io/">Home</a>
+        <a href="devs">Developers</a>
+        <a href="about">About</a>
         <a href="https://discord.gg/ZbuNedvZPT">Contact</a>
     </div>
     <br>
