--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
 
 <body>
     <div class="navbar">
-        <a href="https://verifier-discord.github.io/">Home</a>
+        <a href="index">Home</a>
         <a href="devs">Developers</a>
         <a href="about">About</a>
+        <a href="shop">Shop</a>
         <a href="https://discord.gg/ZbuNedvZPT">Contact</a>
     </div>
     <br>
@@ -206,11 +207,12 @@
                     <h3><u><b>Verify</b></u></h3>
                     <p style="text-align: center;">Click the button below to enter the verify page!</p>
                     <br>
-                    <button class="verifyButton" onclick="window.open('verify')">Click me!</button>
+                    <button class="verifyButton" onclick="window.location.href = 'https://www.https://verifier-discord.github.io/verify';">Click me!</button>
                     <br>
                 </div>
             </div>
         </div>
+        <p style="text-align: center;">Powered by MaR Society © 2024</p>
     </div>
     <script>
         function sendMessage() {
