--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <h3><u><b>Verify</b></u></h3>
                     <p style="text-align: center;">Click the button below to enter the verify page!</p>
                     <br>
-                    <button class="verifyButton" onclick="window.location.href = 'https://www.https://verifier-discord.github.io/verify';">Click me!</button>
+                    <button class="verifyButton" onclick="window.location.href = 'https://verifier-discord.github.io/verify';">Click me!</button>
                     <br>
                 </div>
             </div>
