--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 <br>
                 <div class="containerDarker">
                     <h3><u>How do I get the bot?</u></h3>
-                    <p>You can get the bot <a href="enter_bot_link"><u>here</u></a>. After you click the link, you can add the bot to your server!</p>
+                    <p>You can get the bot <a href="notfound"><u>here</u></a>. After you click the link, you can add the bot to your server!</p>
                 </div>
                 <br>
                 <div class="containerDarker">
