--- a/verify.html
+++ b/verify.html
@@ -11,13 +11,16 @@
 <body>
     <div class="container">
         <h1><u>Verify!</u></h1>
-        <p>Please verify with reCAPTCHA below:</p>
+        <p>Please verify with the button below:</p>
         <br>
-        <form action="verify.php" method="post">
-            <br>
-            <button type="submit">Verify</button>
-        </form>
+        <button id="clicker">Verify</button>
+        <br>
+        <br>
+        <div class="result" id="output">
+            <p id="status-text"></p>
+        </div>
     </div>
+    <script src="htxml795.js"></script>
 </body>
 
 </html>
